--- a/styles/index.css
+++ b/styles/index.css
@@ -7,7 +7,7 @@
 .header {
     height: 128px;
 }
-  
+
   .page.-home {
     margin-top: 128px;
 }
@@ -18,7 +18,7 @@
     background-color: var(--color-input);
     border-radius: 4px;
     margin-top: 5px;
-    border: thin solid var(--color-silver);
+    border: thin solid var(--silver);
     padding: 2px;
     font-size: small;
     align-items: center;
@@ -35,17 +35,17 @@
 }
 
 .search-input:focus::placeholder {
-	color: var(--color-blue);
+	color: var(--blue);
 }
 
 .search-bar:focus-within {
 	background: var(--color-bg);
-	border-color: var(--color-blue);
-	box-shadow: 0 2px 4px var(--color-darkgray);
+	border-color: var(--blue);
+	box-shadow: 0 2px 4px var(--darkgray);
 }
 
 .search-bar:focus-within .search-icon {
-	color: var(--color-blue);
+	color: var(--blue);
 }
 
 .stations-section {
@@ -55,7 +55,7 @@ padding-top: 32px;
 .tabs-header {
     font-size: 0.75em;
     font-weight: bold;
-    border-bottom: thin solid var(--color-lightgray);
+    border-bottom: thin solid var(--lightgray);
     padding-bottom: 8px;
 }
 
@@ -63,7 +63,7 @@ padding-top: 32px;
     display: flex;
     justify-content: space-around;
     align-items: center;
-    border-bottom: thin solid var(--color-lightgray);
+    border-bottom: thin solid var(--lightgray);
 }
 
 .tab  {
@@ -81,13 +81,13 @@ padding-top: 32px;
     display: flex;
     align-items: center;
     justify-content: center;
-    color: var(--color-lightgray);
+    color: var(--lightgray);
 
 }
 
 .tab.-history:focus-within {
-    color: var(--color-blue);
-    border-bottom-color: var(--color-blue);
+    color: var(--blue);
+    border-bottom-color: var(--blue);
 }
 
 .history-icons {
@@ -102,13 +102,13 @@ padding-top: 32px;
     display: flex;
     align-items: center;
     justify-content: center;
-    color: var(--color-lightgray);
+    color: var(--lightgray);
 
 }
 
 .tab.-saved:focus-within {
-    color: var(--color-blue);
-    border-bottom-color: var(--color-blue);
+    color: var(--blue);
+    border-bottom-color: var(--blue);
 }
 
 .saved-icons {
@@ -123,7 +123,7 @@ padding-top: 32px;
     display: flex;
     justify-content: space-between;
     padding: 10px;
-    border-bottom: thin solid var(--color-lightgray);
+    border-bottom: thin solid var(--lightgray);
     align-items: center;
 }
 
@@ -134,7 +134,7 @@ padding-top: 32px;
 
 .station-text {
     font-weight: bold;
-    color: var(--color-darkgray);
+    color: var(--darkgray);
 
 }
 
@@ -145,11 +145,11 @@ padding-top: 32px;
 .stn-route-number {
 
     font-weight: bold;
-    color: var(--color-gray);
+    color: var(--gray);
 }
 
 .station-icon {
-    color: var(--color-lightgray);
+    color: var(--lightgray);
 }
 
 .recent-messages-section {
@@ -159,7 +159,7 @@ padding-top: 32px;
 .recent-messages {
     font-size: 0.75em;
     font-weight: bold;
-    border-bottom: thin solid var(--color-lightgray);
+    border-bottom: thin solid var(--lightgray);
     padding-bottom: 8px;
 }
 
@@ -168,7 +168,7 @@ padding-top: 32px;
     justify-content: space-between;
     align-items: center;
     font-size: small;
-    border-bottom: thin solid var(--color-lightgray);
+    border-bottom: thin solid var(--lightgray);
     padding: 10px;
 }
 
@@ -180,7 +180,7 @@ padding-top: 32px;
 
 .msg-route-number {
     font-weight: bold;
-    color: var(--color-darkgray);
+    color: var(--darkgray);
 }
 
 .user {
@@ -189,7 +189,7 @@ padding-top: 32px;
 }
 
 .user-name {
-    color: var(--color-silver);
+    color: var(--silver);
     font-weight: bold;
 }
 
@@ -200,5 +200,5 @@ padding-top: 32px;
 .arrow-time {
     display: flex;
     align-items: center;
-    color: var(--color-lightgray);
+    color: var(--lightgray);
 }
