--- a/styles/chat.css
+++ b/styles/chat.css
@@ -13,8 +13,7 @@
 }
 
 .messages.-scroll {
-	overflow-x: auto;
-	overflow-y: scroll;
+	overflow-y: auto;
 }
 
 .messages:not(.-scroll) .message-groups {
@@ -52,7 +51,6 @@
 
 .message {
 	max-width: 80%;
-	display: inline-block;
 	padding: 8px 12px;
 	background: var(--silver);
 	color: var(--color-content);
@@ -136,6 +134,7 @@
 	outline: none;
 	border: none;
 	border-radius: 50%;
+	text-align: center;
 	transition: 0.125s background;
 }
 
