--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -174,6 +174,7 @@
 }
 
 .recent-messages {
+    margin-top: 40px;
     font-size: 0.75em;
     font-weight: bold;
     border-bottom: thin solid var(--lightgray);
