--- a/public/styles/chat.css
+++ b/public/styles/chat.css
@@ -65,6 +65,15 @@
 	word-break: break-word;
 }
 
+.message .icon.-like {
+	color: var(--silver);
+	/* display: none; */
+	position: absolute;
+	left: 100%;
+	top: 0;
+	margin: 4px 8px;
+}
+
 .message::before {
 	content: "";
 	display: block;
@@ -91,6 +100,11 @@
 	border-color: transparent;
 	border-left-color: var(--blue);
 	border-bottom-color: var(--blue);
+}
+
+.message-group.-user .icon.-like {
+	left: auto;
+	right: 100%;
 }
 
 .message-bar {
