--- a/public/styles/bus-dating.css
+++ b/public/styles/bus-dating.css
@@ -210,6 +210,7 @@ h2 {
 .option-lhs {
 	display: flex;
 	flex-direction: column;
+	min-width: 0;
 }
 
 .option-rhs {
@@ -224,6 +225,9 @@ h2 {
 	color: var(--darkgray);
 	font-weight: bold;
 	margin-bottom: 2px;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	overflow: hidden;
 }
 
 .option-subtext {
