station: center message time wrap

--- a/public/styles/station.css
+++ b/public/styles/station.css
@@ -138,3 +138,12 @@
 .button {
     margin-top: 22px;
 }
+
+.time {
+    font-size: 0.875rem;
+}
+
+.timewrap {
+    display: flex;
+    align-items: center;
+}
