--- a/public/styles/station.css
+++ b/public/styles/station.css
@@ -1,3 +1,40 @@
+.header.-color {
+  color: white;
+  margin: 0;
+  padding: 0 1rem;
+  width: 100%;
+}
+
+.header.-color.-primary {
+  background: var(--blue);
+}
+
+.header.-color .title, .header.-color .back {
+  color: white;
+}
+
+.header.-color .title {
+  font-size: 1.25rem;
+}
+
+.header.-color .subtitle {
+  color: rgba(255, 255, 255, 0.5);
+  text-align: right;
+}
+
+.header .title-row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  order: 2;
+}
+
+.page.-station .header-text {
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: stretch;
+}
+
 /*********** Header *************/
 
 .title {
