--- a/public/styles/bus-dating.css
+++ b/public/styles/bus-dating.css
@@ -13,6 +13,7 @@
 	--gray: #8F8F8F;
 	--darkgray: #676767;
 	--blue: #5E83E2;
+	--darkblue: #3565C2;
 	--green: #65A164;
 	--yellow: #EEBC3B;
 	--red: #E92554;
