--- a/public/styles/station.css
+++ b/public/styles/station.css
@@ -1,5 +1,6 @@
 .header.-color {
   color: white;
+  border: 0;
   margin: 0;
   padding: 0 1rem;
   width: 100%;
@@ -20,6 +21,8 @@
 .header.-color .subtitle {
   color: rgba(255, 255, 255, 0.5);
   text-align: right;
+  text-transform: uppercase;
+  letter-spacing: 0.0625rem;
 }
 
 .header .title-row {
@@ -29,10 +32,74 @@
   order: 2;
 }
 
-.page.-station .header-text {
+.header-text {
   flex-direction: column;
   justify-content: flex-end;
   align-items: stretch;
+}
+
+.station-map {
+  background: var(--darkblue);
+  padding: 1rem 2rem;
+}
+
+.station-labels {
+  display: flex;
+  justify-content: space-between;
+}
+
+.station-label {
+  color: rgba(255, 255, 255, 0.5);
+  font-size: 0.875rem;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+.station-label.-right {
+  text-align: right;
+}
+
+.station-label:first-child:last-child {
+  text-align: center;
+  width: 100%;
+}
+
+.station-label.-select {
+  color: white;
+  text-transform: initial;
+  font-size: 1rem;
+}
+
+.station-circles {
+  padding: 6px 0;
+  display: flex;
+  justify-content: space-between;
+}
+
+.station-circles::before {
+  content: "";
+  background: rgba(255, 255, 255, 0.5);
+  width: 100%;
+  height: 2px;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.station-circle {
+  width: 16px;
+  height: 16px;
+  border: 2px solid rgba(255, 255, 255, 0.5);
+  border-radius: 50%;
+  background: var(--darkblue);
+}
+
+.station-circle.-select {
+  background: white;
+  border: 2px solid var(--darkblue);
+  width: 14px;
+  height: 14px;
+  box-shadow: 0 0 0 2px rgba(255, 255, 255, 0.5);
 }
 
 /*********** Header *************/
