--- a/public/styles/bus-dating.css
+++ b/public/styles/bus-dating.css
@@ -82,7 +82,6 @@ p {
 }
 
 h1, h2 {
-  color: var(--color-title);
   font-weight: bold;
 }
 
@@ -192,28 +191,25 @@ h2 {
   margin-top: var(--header-height-search);
 }
 
+.search {
+  background-color: var(--color-input);
+  border: thin solid var(--silver);
+  margin-bottom: 8px;
+  border-radius: 16px;
+}
+
 .search-bar {
   display: flex;
   align-items: center;
-  background-color: var(--color-input);
-  border-radius: 4px;
-  border: thin solid var(--silver);
   padding: 4px 8px;
   font-size: small;
   align-items: center;
   height: 32px;
-  margin-bottom: 8px;
-}
-
-.search-icon {
-  margin-right: 4px;
 }
 
 .search-input {
+  margin-left: 4px;
   flex: 1;
-  outline: 0;
-  border: 0;
-  background: transparent;
 }
 
 .search-input:focus::placeholder {
@@ -234,13 +230,24 @@ h2 {
   padding-top: 24px;
 }
 
+.section-header {
+  margin: 0 1rem 4px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .section-title {
-  margin: 0 1rem;
-  padding-bottom: 4px;
   font-size: 0.75rem;
   font-weight: bold;
   text-transform: uppercase;
   letter-spacing: var(--kerning);
+}
+
+.section-subtitle {
+  font-size: 0.875rem;
+  font-weight: 500;
+  color: var(--lightblue);
 }
 
 .section-content {
