revise some report page styles

--- a/public/styles/route.css
+++ b/public/styles/route.css
@@ -7,6 +7,10 @@ body {
   padding-bottom: 2rem;
 }
 
+.section-subtitle {
+  color: var(--lightblue);
+}
+
 .search {
   background: var(--darkblue);
   color: var(--lightblue);
