--- a/public/styles/bus-dating.css
+++ b/public/styles/bus-dating.css
@@ -28,6 +28,7 @@
   --color-content: var(--gray);
   --color-title: var(--darkgray);
   --shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
+  --shadow-heavy: 0 4px 8px rgba(0, 0, 0, 0.25);
   --header-height: 96px;
   --header-height-search: 128px;
   --font-stack: "Work Sans", sans-serif;
@@ -92,6 +93,11 @@ h1 {
 
 h2 {
   font-size: 1.125em;
+}
+
+.page {
+  min-height: 100vh;
+  padding-bottom: 2rem;
 }
 
 .header {
@@ -228,12 +234,13 @@ h2 {
 }
 
 .section {
-  padding-top: 24px;
+  margin-top: 24px;
 }
 
 .section-header {
   font-size: 0.75rem;
   margin: 0 1rem;
+  width: calc(100% - 2rem);
   height: 1.5rem;
   display: flex;
   justify-content: space-between;
@@ -249,7 +256,6 @@ h2 {
 .section-subtitle {
   font-size: 0.875rem;
   font-weight: 500;
-  color: var(--lightblue);
 }
 
 .section-content {
@@ -272,6 +278,7 @@ h2 {
   color: white;
   font-weight: bold;
   border-radius: 8px;
+  box-shadow: var(--shadow-heavy);
   width: calc(100% - 2rem);
   height: 48px;
   margin: 0.75rem 1rem 0;
