--- a/public/styles/report.css
+++ b/public/styles/report.css
@@ -1,5 +1,21 @@
 .page-desc {
-	padding-top: 2em;
+  padding-top: 2em;
+  margin: 0 1rem;
+  color: var(--gray);
+}
+
+.section-title {
+  font-size: 1.25rem;
+  letter-spacing: initial;
+  text-transform: initial;
+}
+
+.section-subtitle {
+  color: var(--gray);
+  font-size: 0.75rem;
+  font-weight: 500;
+  text-transform: uppercase;
+  letter-spacing: var(--kerning);
 }
 
 .report-section {
@@ -20,7 +36,7 @@
 }
 
 .card {
-	background: var(--color-input);
+	background: white;
 	color: var(--color-content);
 	border: 1px solid var(--color-outline);
 	border-radius: 4px;
