--- a/public/styles/bus-dating.css
+++ b/public/styles/bus-dating.css
@@ -119,7 +119,7 @@ h2 {
   color: white;
   border: 0;
   margin: 0;
-  padding: 0 1rem;
+  padding: 0.75rem 1rem;
   width: 100%;
   z-index: 2;
 }
@@ -143,6 +143,10 @@ h2 {
   letter-spacing: var(--kerning);
 }
 
+.header.-color a {
+  color: white;
+}
+
 .header .title-row {
   display: flex;
   justify-content: space-between;
@@ -155,7 +159,6 @@ h2 {
   flex-direction: column;
   justify-content: flex-end;
   align-items: stretch;
-  padding: 0.75rem 0;
 }
 
 .headings {
