--- a/public/styles/bus-dating.css
+++ b/public/styles/bus-dating.css
@@ -128,16 +128,23 @@ h2 {
   background: var(--blue);
 }
 
+.header.-color.-primary .subtitle {
+  color: var(--lightblue);
+}
+
+.header.-color.-secondary {
+  background: var(--green);
+}
+
+.header.-color.-secondary .subtitle {
+  color: rgba(255, 255, 255, 0.5);
+}
+
 .header.-color .title, .header.-color .back {
   color: white;
 }
 
-.header.-color .title {
-  font-size: 1.25rem;
-}
-
 .header.-color .subtitle {
-  color: var(--lightblue);
   text-align: right;
   text-transform: uppercase;
   letter-spacing: var(--kerning);
