--- a/public/styles/chat.css
+++ b/public/styles/chat.css
@@ -1,8 +1,13 @@
 .page.-chat {
-	padding: 0;
+  padding: 0;
+  margin: 0;
+}
+
+.page-content {
 	display: flex;
 	flex-direction: column;
-	position: relative;
+  position: relative;
+  top: var(--header-height);
 	height: calc(100vh - var(--header-height));
 	overflow-y: hidden;
 }
