more chat tweaks

--- a/public/styles/bus-dating.css
+++ b/public/styles/bus-dating.css
@@ -180,10 +180,16 @@ h2 {
   order: 2;
 }
 
+.title.-name {
+  font-size: 1.25rem;
+  text-align: right;
+}
+
 .subtitle {
   color: var(--color-outline);
   font-size: 1em;
   font-weight: bold;
+  margin-bottom: 2px;
 }
 
 .back {
@@ -244,7 +250,7 @@ h2 {
 }
 
 .section {
-  margin-top: 24px;
+  margin-top: 1rem;
 }
 
 .section-header {
