--- a/public/styles/station.css
+++ b/public/styles/station.css
@@ -2,6 +2,13 @@
   padding-bottom: 2rem;
 }
 
+.star {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  margin-bottom: 8px;
+}
+
 .station-map {
   background: var(--darkblue);
   padding: 1rem 2rem;
