--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -1,4 +1,9 @@
-.header.-home .title {
+.header .title-row {
+  order: initial;
+  height: 3rem;
+}
+
+.header .title {
   order: initial;
 }
 
@@ -20,8 +25,12 @@
 }
 
 .section-tabs {
+  background: white;
   display: flex;
-  border-bottom: thin solid var(--lightgray);
+  border-top: thin solid var(--silver);
+  border-bottom: thin solid var(--silver);
+  margin-bottom: 1rem;
+  box-shadow: var(--shadow);
 }
 
 .section-tab {
@@ -53,5 +62,5 @@
   font-size: 0.875rem;
   text-align: center;
   padding-top: 12px;
-  margin-bottom: -10px;
+  color: var(--gray);
 }
