route station filter

--- a/public/styles/route.css
+++ b/public/styles/route.css
@@ -11,6 +11,10 @@ body {
   color: var(--lightblue);
 }
 
+.section-content {
+  margin-top: 4px;
+}
+
 .search {
   background: var(--darkblue);
   color: var(--lightblue);
